# embvm-core

./: .clang-tidy  .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  README.md.adjust.md  meson.build  meson.build.adjust.build  meson_options.txt  meson_options.txt.adjust.txt
docs/: 0001-record-architecture-decisions.md  CONTRIBUTING.md  Doxyfile  glossary.md  software_inventory.xlsx
docs/UsingTheFramework/: adding_a_new_library_target.md  adding_new_boot_sequence.md  adding_new_driver.md  adding_new_driver_type.md  adding_new_hw_platform.md  (+21 more)
src/: meson.build  meson.build.adjust.build
src/app/: main.c  meson.build
src/core/: meson.build  namespace_documentation.hpp
src/core/boot/: boot.cpp  boot_sequencer.hpp  boot_sequencer_tests.cpp  meson.build
src/core/driver/: active_i2c.hpp  active_spi.hpp  basic_display.hpp  clock.hpp  communication_bus.hpp  driver.hpp  driver_registry.hpp  driver_registry_tests.cpp  driver_test.cpp  driver_type.hpp  gpio.hpp  hal_driver.hpp  i2c.hpp  led.hpp  meson.build  spi.hpp  system_clock.hpp  time_of_flight.hpp  timer.hpp
src/core/driver/internal/: basic_display.cpp  gpio.cpp  i2c.cpp  led.cpp  spi.cpp  system_clock.cpp  time_of_flight.cpp  timer.cpp
src/core/hw_platform/: meson.build  timer_manager.hpp  timer_manager_tests.cpp  virtual_hw_platform.hpp  virtual_hw_platform_tests.cpp
src/core/platform/: event.hpp  event_center.hpp  event_queue.hpp  event_tests.cpp  meson.build  virtual_platform.hpp  virtual_platform_dispatch.hpp  virtual_platform_event.hpp  virtual_platform_tests.cpp
src/core/processor/: interrupt_manager.hpp  virtual_processor.hpp  virtual_processor_arch.hpp
src/core/register/: meson.build  register.hpp  register_tests.cpp
src/core/rtos/: condition_variable.hpp  event_flag.hpp  heap.hpp  libcpp_threading.cpp  meson.build  msg_queue.hpp  mutex.hpp  rtos.cpp  rtos.hpp  rtos_defs.hpp  semaphore.hpp  thread.hpp
src/drivers/: meson.build  namespace_documentation.hpp
src/drivers/simulator/: meson.build  system_clock.cpp  system_clock.hpp  timer.cpp  timer.hpp  timer_tests.cpp
src/drivers/unit_test/: driver.hpp  driver_base.cpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  meson.build  spi.cpp  spi.hpp
src/etl/: etl_profile.h
src/hw_platforms/: meson.build
src/hw_platforms/unit_test/: meson.build  unittest_hw_platform.hpp
src/lib/: meson.build
src/lib/example/: example.c  example.h  meson.build
src/os/: meson.build  namespace_documentation.hpp
src/os/posix/: libcpp_threading.cpp  meson.build  os.hpp  posix_condition_variable.hpp  posix_event_flags.hpp  posix_msg_queue.hpp  posix_mutex.hpp  posix_os.cpp  posix_semaphore.hpp  posix_tests.cpp  posix_thread.hpp
src/os/posix/_semaphore/: _posix_semaphore_apple.hpp  _posix_semaphore_default.hpp
src/processors/: meson.build
src/processors/simulator/: meson.build  simulator_processor.cpp  simulator_processor.hpp
src/subsystems/: meson.build  module_definitions.hpp
src/subsystems/logging/: _log_common_defs.h  circular_buffer_logger.hpp  log.h  log.hpp  log_defs.hpp  logger_base.hpp  logging_tests.cpp  meson.build
src/subsystems/version/: meson.build  version.h
src/utilities/: common.h  compiler.h  meson.build  utilities_namespace_documentation.hpp
src/utilities/active_object/: active_object.hpp  active_object_tests.cpp  meson.build
src/utilities/aligned_ptr/: aligned_ptr.hpp  aligned_ptr_tests.cpp  meson.build
src/utilities/bits/: bits.h  bits.hpp  bits_tests.cpp  meson.build
src/utilities/bounce/: bounce.hpp  bounce_tests.cpp  meson.build
src/utilities/dispatch/: dispatch.hpp  dispatch_test.cpp  interrupt_queue.hpp  interrupt_queue_test.cpp  meson.build  static_dispatch_test.cpp
src/utilities/endian/: endian.hpp  endian_tests.cpp
src/utilities/font/: font5x7.h  font8x16.h
src/utilities/function_queue/: function_queue.cpp  function_queue.hpp  function_queue_tests.cpp  meson.build
src/utilities/instance_list/: instance_list.hpp  instance_list_test.cpp  meson.build
src/utilities/interrupt_condition/: interrupt_condition.hpp  interrupt_condition_tests.cpp  meson.build
src/utilities/interrupt_lock/: interrupt_lock.hpp  interrupt_lock_test.cpp  meson.build
src/utilities/math/: rounded_div.h
src/utilities/modm/math/: tolerance.hpp
src/utilities/nop_lock/: meson.build  nop_lock.cpp  nop_lock.hpp
src/utilities/sbrm/: csbrm.hpp  csbrm_test.cpp  meson.build  scope_guard.hpp  scope_guard_tests.cpp
src/utilities/time/: meson.build  time.hpp  time_tests.cpp
src/utilities/tuple_array/: meson.build  tuple_array.hpp  tuple_array_tests.cpp
src/utilities/volatile/: meson.build  volatile.hpp  volatile_tests.cpp
src/utility/: example.c  meson.build
subprojects/: catch2.wrap  compiler-rt.wrap  etl.wrap  gsl-lite.wrap  libc.wrap  libcpp.wrap  libmemory.wrap  microsoft-gsl.wrap
templates/: README.md
templates/application/: main.cpp  meson.build
templates/driver/: basic_display.hpp  communication_bus.hpp  driver_base.cpp  driver_test.cpp  gpio.hpp  i2c.hpp  led.hpp  meson.build  spi.hpp  system_clock.hpp  template_driver_tests.cpp  time_of_flight.hpp  timer.hpp
templates/hw_platform/: meson.build  template_hw_platform.cpp  template_hw_platform.hpp  template_hw_platform_tests.cpp
templates/os/: meson.build  template_hw_platform_tests.cpp
templates/platform/: hw_platform_options.hpp  meson.build  platform.cpp  platform.hpp  platform_logger.hpp  platform_options.hpp  platform_os_options.hpp  template_platform_tests.cpp
templates/processor/: meson.build  processor_architecture.hpp  processor_includes.hpp  template_processor.cpp  template_processor.hpp  template_processor_tests.cpp
templates/processor/internal/: processor_architecture.hpp  processor_includes.hpp
templates/processor_arch/: meson.build  template_processor_arch.cpp  template_processor_arch.hpp  template_processor_arch_tests.cpp
test/: main.c  meson.build  putchar.c  test.hpp
test/catch/: catch_main.cpp
tools/: CI.jenkinsfile  Jenkinsfile  WeeklyCI.jenkinsfile  download_and_deploy_config_files.sh  install_arm_gcc.sh  install_deps.sh  setup_env.sh
(+219 files in other folders)
